# android-libxmp-test

./: .gitignore  .gitmodules  settings.gradle
.github/workflows/: build-apk.yml
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/team/digitalfairy/lencel/jni_shared_test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_shared_test.cpp
app/src/main/java/team/digitalfairy/lencel/jni_shared_test/: LibXMP.java  MainActivity.java  MainService.java  OpenFileDialog.java  XMPFrameInfo.java  XMPPattern.java  deprecated.java.old
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/team/digitalfairy/lencel/jni_shared_test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
